feat: username availability realtime checking and many fixes
